more alignment fixes

--- a/app.scss
+++ b/app.scss
@@ -93,7 +93,7 @@ hgroup {
 		color: lighten(#1c1c1c, 30%);
 	}
 	h1 {
-		margin: 40px 0 0 0;
+		margin: 45px 0 0 0;
 	}
 }
 
@@ -116,7 +116,7 @@ hgroup {
 	h1 {
 		margin: 0;
 		position: absolute;
-		bottom: 80px;
+		bottom: 76px;
 		left: 0;
 		width: 100%;
 	}
